Fix line-height on publication mobile

--- a/src/components/Article/Publications/styles.scss
+++ b/src/components/Article/Publications/styles.scss
@@ -63,7 +63,11 @@
 
     &--on-medium {
       .article-title__link {
-        line-height: 32px;
+        line-height: 1.26;
+
+        @include media-breakpoint-up(md) {
+          line-height: 1.3;
+        }
       }
 
       @include media-breakpoint-up(md) {
